--- a/src/components/productcard/MiniProductCardStyles.css
+++ b/src/components/productcard/MiniProductCardStyles.css
@@ -1,6 +1,6 @@
 .cardarea{
     width:160px;
-    height: 250px;
+    height: 260px;
     margin: 10px;
 }
 
@@ -22,4 +22,13 @@
     width: 60px;
     padding: 5px;
     border-radius: 4px;
+}
+
+.carticon{
+    position: absolute;
+right: 10px;
+color: coral;
+background-color: bisque;
+border-radius: 50px;
+padding: 5px;
 }
